--- a/config.yml
+++ b/config.yml
@@ -1,5 +1,6 @@
 baseURL: "https://ameliegodefroidt.github.io" 
 title: Amélie Godefroidt
+paginate: 20
 theme: PaperMod
 
 enableInlineShortcodes: true
