--- a/config.yml
+++ b/config.yml
@@ -12,12 +12,9 @@ taxonomies:
 
 menu:
     main:
-        - name: Books
-          url: books/
-          weight: 5 
-        - name: Papers
+        - name: Publications
           url: papers/
-          weight: 2
+          weight: 1
         - name: Courses
           url: courses/
           weight: 3
@@ -29,8 +26,8 @@ menu:
           weight: 6
 
 params:
-    description: "This website hosts Moritz-Maria von Igelfeld's research papers, books, course materials, data, curriculum vitae, and contact information."
-    author: Moritz-Maria von Igelfeld
+    description: "This website hosts Amélie Godefroidt's research papers, books, course materials, data, curriculum vitae, and contact information."
+    author: Amélie Godefroidt
     # googleAnalyticsID: "G-XXXXX"
     DateFormat: "January 2006"
     defaultTheme: light
