--- a/config.yml
+++ b/config.yml
@@ -15,7 +15,7 @@ menu:
         - name: Books
           url: books/
           weight: 5 
-        - name: Papers
+        - name: Publications
           url: papers/
           weight: 2
         - name: Courses
@@ -29,8 +29,8 @@ menu:
           weight: 6
 
 params:
-    description: "This website hosts Moritz-Maria von Igelfeld's research papers, books, course materials, data, curriculum vitae, and contact information."
-    author: Moritz-Maria von Igelfeld
+    description: "This website hosts Amélie Godefroidt's research papers, books, course materials, data, curriculum vitae, and contact information."
+    author: Amélie Godefroidt
     # googleAnalyticsID: "G-XXXXX"
     DateFormat: "January 2006"
     defaultTheme: light
@@ -54,8 +54,8 @@ params:
     math: true
     profileMode:
           enabled: true
-          title: Professor Dr von Igelfeld
-          subtitle: "I am a Professor in the Institute of Romance Philology at the University of Regensburg, Germany. My research focuses on Portuguese irregular verbs. I was a doctoral student of Professor Dr Dieter Vogelsang in Munich, and later a second assistant of Professor Walter Schoeffler-Henschell at the University of Wiesbaden."
+          title: Amélie Godefroidt
+          subtitle: "I am an Assistant Professor in Conflict Management at the IESEG School of Management, France. My research focuses on Portuguese irregular verbs. I was a doctoral student of Professor Dr Dieter Vogelsang in Munich, and later a second assistant of Professor Walter Schoeffler-Henschell at the University of Wiesbaden."
           imageUrl: "picture.jpeg"
           imageWidth: 160
           imageHeight: 160
