--- a/config.yml
+++ b/config.yml
@@ -17,13 +17,13 @@ menu:
           weight: 1
         - name: Courses
           url: courses/
-          weight: 3
+          weight: 2
         - name: Data
           url: data/
-          weight: 4 
-        - name: Blog
-          url: https://en.wikipedia.org/wiki/Moritz-Maria_von_Igelfeld_(character)
-          weight: 6
+          weight: 3
+        - name: Resume
+          url: cv_godefroidt.pdf
+          weight: 4
 
 params:
     description: "This website hosts Amélie Godefroidt's research papers, books, course materials, data, curriculum vitae, and contact information."
@@ -41,7 +41,7 @@ params:
     ShowBreadCrumbs: false
     ShowCodeCopyButtons: true
     ShowAllPagesInArchive: false
-    MainSections: ["books","courses","papers","data"]
+    MainSections: ["publications","courses","data","resume"]
     ShowToc: false
     disableScrollToTop: true
     TocOpen: true
@@ -52,7 +52,7 @@ params:
     profileMode:
           enabled: true
           title: Amélie Godefroidt
-          subtitle: "I am an Assistant Professor in Conflict Management at the IESEG School of Management, France. My research focuses on Portuguese irregular verbs. I was a doctoral student of Professor Dr Dieter Vogelsang in Munich, and later a second assistant of Professor Walter Schoeffler-Henschell at the University of Wiesbaden."
+          subtitle: "I am an Assistant Professor in Conflict Management at the IESEG School of Management, France. My research focuses on public opinion formation during and after episodes of political violence and social contention."
           imageUrl: "picture.jpeg"
           imageWidth: 160
           imageHeight: 160
