--- a/config.yml
+++ b/config.yml
@@ -50,7 +50,7 @@ params:
           enabled: true
           title: Amélie Godefroidt
           subtitle: "I am an Assistant Professor in Conflict Management at the IESEG School of Management, France. My research focuses on public opinion formation during and after episodes of political violence and social contention."
-          imageUrl: "picture.jpeg"
+          imageUrl: "picture.jpg"
           imageTitle: Amélie Godefroidt
           imageWidth: 160
           imageHeight: 160
