--- a/config.yml
+++ b/config.yml
@@ -69,6 +69,8 @@ params:
           url: cv.pdf
         - name: Google Scholar
           url: https://scholar.google.com/citations?user=9EjHhVUAAAAJ&hl=en
+        - name: LinkedIn
+          url: https://www.linkedin.com/in/ameliegodefroidt/
         - name: GitHub
           url: https://github.com/ameliegodefroidt
         - name: Twitter
