--- a/config.yml
+++ b/config.yml
@@ -49,7 +49,7 @@ params:
     profileMode:
           enabled: true
           title: Amélie Godefroidt
-          subtitle: "I am an Assistant Professor in Conflict Management at the IESEG School of Management (France) and a Research Fellow at the University of Leuven (Belgium). My research focuses on public opinion formation during and after episodes of political violence and social contention."
+          subtitle: "I am an Assistant Professor in Conflict Management at the IESEG School of Management (France). My research focuses on public opinion formation during and after episodes of political violence and social contention."
           imageUrl: "picture.jpg"
           imageTitle: Amélie Godefroidt
           imageWidth: 110
